sidebar overflowing height of document fix

--- a/_components/Navigation.css
+++ b/_components/Navigation.css
@@ -36,7 +36,7 @@
   .nav {
     position: sticky;
     top: 4rem;
-    height: 100vh;
+    height: calc(100vh - 4rem);
     overflow-y: auto;
   }
 }
